--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="textUtils is a utility which can manipulate your text"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon-72x72.png" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>TextUtils</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
